--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.10",
     "styled-reset": "^4.5.2",
-    "typescript": "^4.4.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
