--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react",
+    "baseUrl": ".", // 또는 해당 프로젝트의 기본 경로
+    "paths": {
+      "@src/*": ["./*"]
+    }
   },
   "include": ["src"]
 }
