--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.10",
     "styled-reset": "^4.5.2",
     "typescript": "^4.9.5",
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
+    "html-webpack-plugin": "^5.6.0",
     "http-proxy-middleware": "^3.0.0"
   }
 }
